--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -32,11 +32,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <script type="text/javascript" src="dist/app.bundle.js"></script>
-        <script type="javascript">
-            var math = new MathWidget(); console.log(math.Pow(2,3));
-        </script>
     </div>
-</body>
+<script type="text/javascript" src="dist/app.bundle.js"></script></body>
 
 </html>
