--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TypeScriptTesting</title>
+    <link href="./assets/app.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -13,26 +15,45 @@
         <h1>Test Application</h1>
         <div id="widget">
             <!-- DOM inserted by js -->
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>Base</label>
+                        <input type="text" class="form-control" id="base" placeholder="0">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>Exponent</label>
+                        <input type="text" class="form-control" id="exponent" placeholder="0">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>Result</label>
+                        <input type="text" class="form-control" id="result" placeholder="1" disabled="disabled">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">
-              <input type="checkbox" class="form-check-input">
-              Check me out
-            </label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
     </div>
+    </div>
+    <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="dist/app.bundle.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            $('#submit').click(function() {
+                var matchWidget = new MathWidget();
+                console.log(matchWidget.Pow(2, 3));
+            });
+        })
+    </script>
 </body>
 
 </html>
