--- a/index.html
+++ b/index.html
@@ -15,45 +15,12 @@
         <h1>Test Application</h1>
         <div id="widget">
             <!-- DOM inserted by js -->
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label>Base</label>
-                        <input type="text" class="form-control" id="base" placeholder="0">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label>Exponent</label>
-                        <input type="text" class="form-control" id="exponent" placeholder="0">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label>Result</label>
-                        <input type="text" class="form-control" id="result" placeholder="1" disabled="disabled">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <button id="submit" type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     </div>
     <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="dist/app.bundle.js"></script>
-    <script type="text/javascript">
-        $(function() {
-            $('#submit').click(function() {
-                var matchWidget = new MathWidget();
-                console.log(matchWidget.Pow(2, 3));
-            });
-        })
-    </script>
+    <script type="text/javascript" src="./dist/app.bundle.js"></script>
 </body>
 
 </html>
